# prisma_api

./: .gitignore  API_REFERENCE.md  DEVELOPMENT_SUMMARY.md  README.md  User Guide.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: api_access.ipynb  api_access.py  api_access_optimade.py  prisma_api_demo.py
integration/: DB_crosscheck_status.md
integration/prisma_cloud/: endpoint_urls.md
integration/prisma_v2/case_study_integration/: request.md  response.md
integration/prisma_v2/prisma_cloud_apis_v2/: api_v2.py  api_v2_examples.md  tests_api_v2.py
prisma_api/: __init__.py  config.py  prisma_api.py  prisma_api_v2.py
tests/: crosscheck_cases_bundle.py  crosscheck_dev_vs_prod.py  crosscheck_materials.py  crosscheck_tables.py  test_prisma_api.py  test_prisma_api_v2.py
