[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma_api"
version = "0.2.2"
description = "A package for interacting with PrISMa Platform APIs. PrISMa is a holistic system for numerical synthesis and assessment of Metal-Organic Frameworks and their applications, for Direct Air Capture of CO2. For more information, see: https://prisma.hw.ac.uk."
authors = [
    {name = "Peter McCallum", email = "peter.mccallum@dun-eideann-labs.co.uk"}
]
license = {text = "GNUv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "platformdirs>=2.5.0",
    "requests>=2.27.0",
]

[tool.setuptools]
packages = ["prisma_api"]
include-package-data = true

